opam-version: "2.0"
name: "cucumber"
version: "1.0.2"
author: "Christopher Yocum <cyocum@gmail.com>"
homepage: "https://github.com/cucumber/cucumber.ml"
bug-reports: "https://github.com/cucumber/cucumber.ml/issues"
maintainer: "Christopher Yocum <cyocum@gmail.com>"
build: [
       ["dune" "build" "-p" name "-j" jobs]
]
install: ["dune" "install" "cucumber"]
remove: ["dune" "uninstall"]
depends: [
  "re" {= "1.9.0"}
  "base" {= "0.14.0"}
  "cmdliner" {= "1.0.2"}
  "dune" {build & >= "1.0.0"}
]
available: [ocaml-version >= "4.02.3"]
