(data_only_dirs gherkin-c)

(rule
 (deps (source_tree gherkin-c))
 (targets libgherkin-c.a dllgherkin-c.so)
 (action
 (no-infer
  (progn
   (chdir gherkin-c (run make libs libs_so))
   (copy gherkin-c/libs/libgherkin.a libgherkin-c.a)
   (copy gherkin-c/libs/libgherkin.so.7.0.4 dllgherkin-c.so)))))

(library
	(name cucumber)
	(public_name cucumber)
	(libraries cmdliner re re.perl base lwt lwt.unix)
	(synopsis "BDD style testing for OCaml")
	(foreign_archives gherkin-c)
	(foreign_stubs (language c) (names gherkin_intf)))

